--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <!-- A-Frameライブラリの読み込み -->
+        <!--script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script-->
+        <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+        <!-- AR.jsライブラリの読み込み (Marker based) -->
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+        <!-- TODO: gesture-detector.js and gesture handler.js -->
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
     </head>
