--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="pattern/marker.patt"
+                url="pattern/pattern_001.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
