--- a/idx.html
+++ b/idx.html
@@ -20,22 +20,11 @@
             embedded
             gesture-detector
         >
-        <!--
-        <a-assets>
-            <a-asset-item id="car-obj" src="assets/bugatti.obj"></a-asset-item>
-            <a-asset-item id="car-mtl" src="assets/bugatti.mtl"></a-asset-item>
-        </a-assets>
-        <a-assets>
-            <a-asset-item id="gun-obj" src="assets/hundgun.obj"></a-asset-item>
-            <a-asset-item id="gun-mtl" src="assets/hundgun.mtl"></a-asset-item>
-        </a-assets>
-    -->
-
             <a-marker
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="pattern/marker.patt"
+                url="pattern/pattern_001.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
@@ -48,34 +37,6 @@
                     rotation="-90 0 0"
                     gesture-handler
                 ></a-image>
-            </a-marker>
-
-                <!--
-            <a-marker preset="custom" type="pattern" url="pattern/pattern_001.patt">
-                <a-image
-                    src="assets/asset.png"
-                    scale="1 1 1"
-                    class="clickable"
-                    rotation="-90 0 0"
-                    gesture-handler
-                ></a-image>
-
-                <a-obj-model 
-                    src="#car-obj" 
-                    mtl="#car-mtl" 
-                    position="0 0 0" 
-                    rotation="0 0 0" 
-                    scale="0.05 0.05 0.05" 
-                    visible="true"
-                    >
-                </a-obj-model>
-
-                <a-entry>
-                     <a-obj-model src="#grass_obj" mtl="#grass_mtl" position="-0.3 0 0" rotation="-90 0 0" scale="0.03 0.03 0.03" visible="true"></a-obj-model>
-                    <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
-                </a-entry>
-                <a-text value="CAR" position="0 0 0" rotation="0 0 0" scale="2 2 2" color="ff0000"></a-text>
-            -->
             </a-marker>
 
             <a-entity camera></a-entity>
