--- a/idx.html
+++ b/idx.html
@@ -5,7 +5,7 @@
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <!--script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script-->
         <!-- AR.jsライブラリの読み込み (Marker based) -->
-        <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <!-- TODO: gesture-detector.js and gesture handler.js -->
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
@@ -24,7 +24,7 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="pattern/pattern_001.patt"
+                url="pattern/pattern-005.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
