--- a/index_.html
+++ b/index_.html
@@ -48,8 +48,7 @@
                 ></a-image>
             </a-marker>
 
-                <!--
-            <a-marker preset="custom" type="pattern" url="pattern/pattern_001.patt">
+            <a-marker preset="custom" type="pattern" url="pattern/pattern-005.patt">
                 <a-image
                     src="assets/asset.png"
                     scale="1 1 1"
@@ -57,7 +56,7 @@
                     rotation="-90 0 0"
                     gesture-handler
                 ></a-image>
-
+                <!--
                 <a-obj-model 
                     src="#car-obj" 
                     mtl="#car-mtl" 
@@ -73,9 +72,8 @@
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entry>
                 <a-text value="CAR" position="0 0 0" rotation="0 0 0" scale="2 2 2" color="ff0000"></a-text>
-            -->
             </a-marker>
-
+            -->
             <a-entity camera></a-entity>
         </a-scene>
     </body>
