--- a/index_.html
+++ b/index_.html
@@ -20,6 +20,7 @@
             embedded
             gesture-detector
         >
+        <p> assets loading ... </p>
         <a-assets>
             <a-asset-item id="car-obj" src="assets/bugatti.obj"></a-asset-item>
             <a-asset-item id="car-mtl" src="assets/bugatti.mtl"></a-asset-item>
@@ -28,6 +29,7 @@
             <a-asset-item id="gun-obj" src="assets/hundgun.obj"></a-asset-item>
             <a-asset-item id="gun-mtl" src="assets/hundgun.mtl"></a-asset-item>
         </a-assets>
+        <p> done assets load ! </p>
 
             <a-marker
                 id="animated-marker"
@@ -72,8 +74,8 @@
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entry>
                 <a-text value="CAR" position="0 0 0" rotation="0 0 0" scale="2 2 2" color="ff0000"></a-text>
-            </a-marker>
             -->
+            </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
     </body>
