--- a/index_.html
+++ b/index_.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="ja">
     <head>
         <!-- A-Frameライブラリの読み込み -->
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -31,11 +31,10 @@
             <a-asset-item id="gun-obj" src="assets/hundgun.obj"></a-asset-item>
             <a-asset-item id="gun-mtl" src="assets/hundgun.mtl"></a-asset-item>
         </a-assets>
-        <a-assets>
-            <a-asset-item id="santa-obj" src="assets/santa/santa.obj"></a-asset-item>
-            <a-asset-item id="santa-mtl" src="assets/santa/santa.mtl"></a-asset-item>
-        </a-assets>
         -->
+        <a-assets>
+            <img id="icecat" src="assets/asset.png">
+        </a-assets>
 
             <a-marker
                 id="animated-marker"
@@ -56,7 +55,6 @@
                 ></a-image>
             </a-marker>
 
-            <!-- 
             <a-marker preset="custom" type="pattern" url="pattern/pattern-005.patt">
                 <a-image
                     src="assets/asset.png"
@@ -65,6 +63,9 @@
                     rotation="-90 0 0"
                     gesture-handler
                 ></a-image>
+
+                <!--
+
                 <a-obj-model 
                     src="#car-obj" 
                     mtl="#car-mtl" 
@@ -80,9 +81,8 @@
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entry>
                 <a-text value="CAR" position="0 0 0" rotation="0 0 0" scale="2 2 2" color="ff0000"></a-text>
-            </a-marker>
-
             -->
+            </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
     </body>
