--- a/index_.html
+++ b/index_.html
@@ -6,6 +6,7 @@
         <!--script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script-->
         <!-- AR.jsライブラリの読み込み (Marker based) -->
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+        <script type="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
         <!--script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script-->
         <!-- TODO: gesture-detector.js and gesture handler.js -->
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
@@ -16,28 +17,28 @@
         <a-scene
             vr-mode-ui="enabled: false;"
             loading-screen="enabled: false;"
-            arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+            arjs="trackingMethod: best; debugUIEnabled: false;"
             id="scene"
             embedded
             gesture-detector
         >
 
-        <!--
-        <a-assets>
-            <a-asset-item id="car-obj" src="assets/bugatti.obj"></a-asset-item>
-            <a-asset-item id="car-mtl" src="assets/bugatti.mtl"></a-asset-item>
-        </a-assets>
-        <a-assets>
-            <a-asset-item id="gun-obj" src="assets/hundgun.obj"></a-asset-item>
-            <a-asset-item id="gun-mtl" src="assets/hundgun.mtl"></a-asset-item>
-        </a-assets>
-        -->
-        <a-assets>
-            <img id="icecat" src="assets/asset.png">
-        </a-assets>
+            <!--
+            <a-assets>
+                <a-asset-item id="car-obj" src="assets/bugatti.obj"></a-asset-item>
+                <a-asset-item id="car-mtl" src="assets/bugatti.mtl"></a-asset-item>
+            </a-assets>
+            <a-assets>
+                <a-asset-item id="gun-obj" src="./assets/handgun.obj"></a-asset-item>
+                <a-asset-item id="gun-mtl" src="./assets/handgun.mtl"></a-asset-item>
+            </a-assets>
+            -->
+            <a-assets>
+                <img id="icecat" src="assets/asset.png">
+            </a-assets>
 
             <a-marker
-                id="animated-marker"
+                id="animated-marke]r"
                 type="pattern"
                 preset="custom"
                 url="pattern/marker.patt"
