--- a/index_.html
+++ b/index_.html
@@ -34,6 +34,8 @@
             </a-assets>
             -->
             <a-assets>
+                <a-asset-item id="gun-obj" src="./assets/handgun.obj"></a-asset-item>
+                <a-asset-item id="gun-mtl" src="./assets/handgun.mtl"></a-asset-item>
                 <img id="icecat" src="assets/asset.png">
             </a-assets>
 
