--- a/index_.html
+++ b/index_.html
@@ -59,6 +59,7 @@
             </a-marker>
 
             <a-marker preset="custom" type="pattern" url="pattern/pattern-005.patt">
+                <!--
                 <a-image
                     src="assets/asset.png"
                     scale="1 1 1"
@@ -66,9 +67,9 @@
                     rotation="-90 0 0"
                     gesture-handler
                 ></a-image>
+                -->
 
                 <!--
-
                 <a-obj-model 
                     src="#car-obj" 
                     mtl="#car-mtl" 
@@ -78,13 +79,13 @@
                     visible="true"
                     >
                 </a-obj-model>
+            -->
 
                 <a-entry>
-                     <a-obj-model src="#grass_obj" mtl="#grass_mtl" position="-0.3 0 0" rotation="-90 0 0" scale="0.03 0.03 0.03" visible="true"></a-obj-model>
+                     <a-obj-model src="#gun-obj" mtl="#gun-mtl" position="-0.3 0 0" rotation="-90 0 0" scale="0.03 0.03 0.03" visible="true"></a-obj-model>
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entry>
                 <a-text value="CAR" position="0 0 0" rotation="0 0 0" scale="2 2 2" color="ff0000"></a-text>
-            -->
             </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
