--- a/index_.html
+++ b/index_.html
@@ -85,7 +85,7 @@
                      <a-obj-model src="#gun-obj" mtl="#gun-mtl" position="0 0 0" rotation="0 0 0" scale="0.3 0.3 0.3" visible="true"></a-obj-model>
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entry>
-                <a-text value="CAR" position="0 0 0" rotation="0 0 0" scale="2 2 2" color="ff0000"></a-text>
+                <a-text value="CAR" position="0 0 0" rotation="0 0 0" scale="2 2 2" color="#ff0000"></a-text>
             </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
