--- a/index_.html
+++ b/index_.html
@@ -34,6 +34,8 @@
             </a-assets>
             -->
             <a-assets>
+                <a-asset-item id="car-obj" src="assets/bugatti.obj"></a-asset-item>
+                <a-asset-item id="car-mtl" src="assets/bugatti.mtl"></a-asset-item>
                 <a-asset-item id="gun-obj" src="./assets/handgun.obj"></a-asset-item>
                 <a-asset-item id="gun-mtl" src="./assets/handgun.mtl"></a-asset-item>
                 <img id="icecat" src="assets/asset.png">
@@ -69,7 +71,6 @@
                 ></a-image>
                 -->
 
-                <!--
                 <a-obj-model 
                     src="#car-obj" 
                     mtl="#car-mtl" 
@@ -79,12 +80,13 @@
                     visible="true"
                     >
                 </a-obj-model>
-            -->
 
+                <!--
                 <a-entry>
                      <a-obj-model src="#gun-obj" mtl="#gun-mtl" position="0 0 0" rotation="0 0 0" scale="0.3 0.3 0.3" visible="true"></a-obj-model>
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entry>
+                -->
                 <a-text value="CAR" position="0 0 0" rotation="0 0 0" scale="2 2 2" color="#ff0000"></a-text>
             </a-marker>
             <a-entity camera></a-entity>
