--- a/index_.html
+++ b/index_.html
@@ -42,7 +42,7 @@
             </a-assets>
 
             <a-marker
-                id="animated-marke]r"
+                id="animated-marker"
                 type="pattern"
                 preset="custom"
                 url="pattern/marker.patt"
