--- a/index_.html
+++ b/index_.html
@@ -28,14 +28,8 @@
                 <a-asset-item id="car-obj" src="assets/bugatti.obj"></a-asset-item>
                 <a-asset-item id="car-mtl" src="assets/bugatti.mtl"></a-asset-item>
             </a-assets>
-            <a-assets>
-                <a-asset-item id="gun-obj" src="./assets/handgun.obj"></a-asset-item>
-                <a-asset-item id="gun-mtl" src="./assets/handgun.mtl"></a-asset-item>
-            </a-assets>
             -->
             <a-assets>
-                <a-asset-item id="car-obj" src="assets/bugatti.obj"></a-asset-item>
-                <a-asset-item id="car-mtl" src="assets/bugatti.mtl"></a-asset-item>
                 <a-asset-item id="gun-obj" src="./assets/handgun.obj"></a-asset-item>
                 <a-asset-item id="gun-mtl" src="./assets/handgun.mtl"></a-asset-item>
                 <img id="icecat" src="assets/asset.png">
@@ -72,8 +66,8 @@
                 -->
 
                 <a-obj-model 
-                    src="#car-obj" 
-                    mtl="#car-mtl" 
+                    src="#gun-obj" 
+                    mtl="#gun-mtl" 
                     position="0 0 0" 
                     rotation="0 0 0" 
                     scale="0.05 0.05 0.05" 
