--- a/index_.html
+++ b/index_.html
@@ -32,6 +32,8 @@
             <a-assets>
                 <a-asset-item id="gun-obj" src="./assets/handgun.obj"></a-asset-item>
                 <a-asset-item id="gun-mtl" src="./assets/handgun.mtl"></a-asset-item>
+                <a-asset-item id="santa-obj" src="./assets/santa/santa.obj"></a-asset-item>
+                <a-asset-item id="santa-mtl" src="./assets/santa/santa.mtl"></a-asset-item>
                 <img id="icecat" src="assets/asset.png">
             </a-assets>
 
@@ -56,8 +58,8 @@
 
             <a-marker preset="custom" type="pattern" url="pattern/pattern-005.patt">
                 <a-obj-model 
-                    src="#gun-obj" 
-                    mtl="#gun-mtl" 
+                    src="#santa-obj" 
+                    mtl="#santa-mtl" 
                     position="0 0 0" 
                     rotation="0 0 0" 
                     scale="0.5 0.5 0.5" 
