--- a/index_.html
+++ b/index_.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ja">
     <head>
+        <meta charset="utf-8">
         <!-- A-Frameライブラリの読み込み -->
         <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
         <!--script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script-->
@@ -34,6 +35,8 @@
                 <a-asset-item id="gun-mtl" src="./assets/handgun.mtl"></a-asset-item>
                 <a-asset-item id="santa-obj" src="./assets/santa/santa.obj"></a-asset-item>
                 <a-asset-item id="santa-mtl" src="./assets/santa/santa.mtl"></a-asset-item>
+                <a-asset-item id="pig-obj" src="./assets/pig/Pig.obj"></a-asset-item>
+                <a-asset-item id="pig-mtl" src="./assets/pig/Pig.mtl"></a-asset-item>
                 <img id="icecat" src="assets/asset.png">
             </a-assets>
 
@@ -67,12 +70,10 @@
                     >
                 </a-obj-model>
 
-                <!--
                 <a-entry>
-                     <a-obj-model src="#gun-obj" mtl="#gun-mtl" position="0 0 0" rotation="0 0 0" scale="0.3 0.3 0.3" visible="true"></a-obj-model>
+                     <a-obj-model src="#pig-obj" mtl="#pig-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entry>
-                -->
                 <a-text value="santa" position="0 0 0" rotation="0 0 0" scale="2 2 2" color="#ff0000"></a-text>
             </a-marker>
             <a-entity camera></a-entity>
