--- a/index_.html
+++ b/index_.html
@@ -59,10 +59,13 @@
                     gesture-handler
                 ></a-image>
             -->
+                <a-obj-model src="#pig-obj" mtl="#pig-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
+                <!--
                 <a-entry>
                      <a-obj-model src="#pig-obj" mtl="#pig-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entry>
+            -->
             </a-marker>
 
             <a-marker preset="custom" type="pattern" url="pattern/pattern-005.patt">
