--- a/index_.html
+++ b/index_.html
@@ -59,7 +59,7 @@
                     gesture-handler
                 ></a-image>
             -->
-                <a-obj-model src="#pig-obj" mtl="#pig-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
+                <a-obj-model src="#gun-obj" mtl="#gun-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
                 <!--
                 <a-entry>
                      <a-obj-model src="#pig-obj" mtl="#pig-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
