--- a/index_.html
+++ b/index_.html
@@ -59,14 +59,11 @@
                     gesture-handler
                 ></a-image>
             -->
-                <a-entry>
+                <a-entity>
                     <a-obj-model src="#gun-obj" mtl="#gun-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
-                    <!--
                      <a-obj-model src="#pig-obj" mtl="#pig-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
-                                     -->
-
-                </a-entry>
+                </a-entity>
             </a-marker>
 
             <a-marker preset="custom" type="pattern" url="pattern/pattern-005.patt">
