--- a/index_.html
+++ b/index_.html
@@ -72,7 +72,7 @@
                                 dir: alternate; 
                                 dur: 2000;
                                 loop: true;
-                                easing: easiInOutSine">
+                                easing: easeInOutSine">
                     <a-obj-model 
                         src="#santa-obj" 
                         mtl="#santa-mtl" 
