--- a/index_.html
+++ b/index_.html
@@ -65,6 +65,7 @@
             </a-marker>
 
             <a-marker preset="custom" type="pattern" url="pattern/pattern-005.patt">
+                <!--
                 <a-entity
                     animation=  "property: rotation;
                                 from: 0 0 0;
@@ -73,6 +74,8 @@
                                 dur: 2000;
                                 loop: true;
                                 easing: easeInOutSine">
+                            -->
+                <a-entity>
                     <a-obj-model 
                         src="#santa-obj" 
                         mtl="#santa-mtl" 
