--- a/index_.html
+++ b/index_.html
@@ -83,6 +83,13 @@
                         rotation="0 0 0" 
                         scale="0.5 0.5 0.5" 
                         visible="true"
+                        animation_rotation="property: rotation;
+                                from: 0 0 0;
+                                to: 360 0 0; 
+                                dir: alternate; 
+                                dur: 2000;
+                                loop: true;
+                                easing: easeInOutSine"
                         >
                     </a-obj-model>
                 </a-entity>
