--- a/index_.html
+++ b/index_.html
@@ -83,7 +83,7 @@
                         rotation="0 0 0" 
                         scale="0.5 0.5 0.5" 
                         visible="true"
-                        animation_rotation="property: rotation;
+                        animation__rotation="property: rotation;
                                 from: 0 0 0;
                                 to: 360 0 0; 
                                 dir: alternate; 
