--- a/index_.html
+++ b/index_.html
@@ -35,8 +35,8 @@
                 <a-asset-item id="gun-mtl" src="./assets/handgun.mtl"></a-asset-item>
                 <a-asset-item id="santa-obj" src="./assets/santa/santa.obj"></a-asset-item>
                 <a-asset-item id="santa-mtl" src="./assets/santa/santa.mtl"></a-asset-item>
-                <a-asset-item id="pig-obj" src="./assets/pig/Pig.obj"></a-asset-item>
-                <a-asset-item id="pig-mtl" src="./assets/pig/Pig.mtl"></a-asset-item>
+                <a-asset-item id="cube-obj" src="./assets/cube/cube.obj"></a-asset-item>
+                <a-asset-item id="cube-mtl" src="./assets/cube/cube.mtl"></a-asset-item>
                 <img id="icecat" src="assets/asset.png">
             </a-assets>
 
@@ -60,7 +60,7 @@
                 ></a-image>
             -->
                 <a-entity>
-                    <a-obj-model src="#gun-obj" mtl="#gun-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
+                    <a-obj-model src="#cube-obj" mtl="#cube-mtl" position="0 0 0" rotation="0 0 0" scale="2 2 2" visible="true"></a-obj-model>
                 </a-entity>
             </a-marker>
 
